--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
+  font-family: sans-serif;
+  font-size: 14px; 
   background-image:url("image.jpg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,4 +42,69 @@ footer{
     padding: 2px;
     background-color:brown;
     border-radius: 12px;
+}
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  inset: 0;
+}
+
+.section{
+  background-color: #000;
+  color: #fff;
+  height: 36px;
+  width: 36px;
+  margin: 0px 7px 0px;
+  padding: 5px;
+  border-radius: 8px;
+  display: inline-flex;
+  align-items: center;
+  white-space: nowrap;
+  overflow: hidden;
+  box-shadow: 5px 5px 8px rgba(0,0,0,0.9);
+  transition: width 300ms ease-in-out 0s, background-color 300ms linear 200ms;
+}
+
+.icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 36px;
+  aspect-ratio: 1 / 1;
+}
+
+a{
+  text-decoration: none;
+}
+
+.section:hover{
+  width: 140px;
+  transition: width 300ms ease-in-out 0s, background-color 100ms linear 0s;
+}
+
+.section::after{
+  content: attr(tooltip);
+  margin-left: 10px;
+}
+
+.facebook:hover{
+  background: #3b5998;
+}
+
+.instagram:hover{
+  background: #3f729b;
+}
+
+.youtube:hover{
+  background: #cd201f;
+}
+
+.twitter:hover{
+  background: #55acee;
+}
+
+.github:hover{
+  background: #00405d;
 }
