--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ text-align: center;
 background-color: brown;
 border-radius: 12px;
 padding: 12px;
-}   
+range:50px 50px;
+} 
 a:link {
     color: green;
     background-color: transparent;
