--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-; font-family: Arial, sans-serif;
+  background-color: bisque;
+  font-family: Arial, sans-serif;
   font-size: 14px; 
   }
 .header{
@@ -15,7 +16,7 @@ padding: 12px;
   text-align: center;
   
 }
-.logo img{
+.logo{
   height: 100px; 
   width: 100px;
   border-radius:50%;
@@ -50,6 +51,37 @@ footer{
     background-color:brown;
     border-radius: 12px;
 }
+ .footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  }
+  
+  footer p {
+  margin: 0;
+  }
+  
+  footer nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  }
+  
+  footer nav li {
+  margin-left: 20px;
+  }
+  
+  footer nav li a {
+  color: #fff;
+  text-decoration: none;
+  }
+  
+  footer nav li a:hover {
+  text-decoration: underline;
+  }
+  
 .social-media{
 display: inline-block;
 padding: 10px; ;
@@ -65,7 +97,7 @@ border-radius:50%;
   color: bisque;
 }
   .banner {
-  background-image: url('banner.jpg');
+  background-image: url('banner.jpg.jpg');
   background-size: cover;
   background-position: center;
   color: #fff;
@@ -164,40 +196,4 @@ border-radius:50%;
   }
   
   /* Footer Styles */
-  footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  }
-  
-  .footer-content {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  }
-  
-  footer p {
-  margin: 0;
-  }
-  
-  footer nav ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  }
-  
-  footer nav li {
-  margin-left: 20px;
-  }
-  
-  footer nav li a {
-  color: #fff;
-  text-decoration: none;
-  }
-  
-  footer nav li a:hover {
-  text-decoration: underline;
-  }
-  
+ 
