--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ border-radius:50%;
   margin: 0 auto;
   height: 100px; 
   width: 100px;
+  border-radius:50%;
   }
   
   .feature h3 {
@@ -185,6 +186,7 @@ border-radius:50%;
   margin: 0 auto;
   height: 100px; 
   width: 100px;
+  border-radius:50%;
   }
   
   .course h3 {
@@ -194,6 +196,4 @@ border-radius:50%;
   .course p {
   margin-top: 10px;
   }
-  
-  /* Footer Styles */
  
