--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ border-radius:50%;
   background-position: center;
   color: #fff;
   padding: 50px;
+  border-radius: 12px;
   text-align: center;
   }
   
@@ -145,6 +146,7 @@ border-radius:50%;
   text-align: left;
   vertical-align: top;
   width: 300px;
+  border-radius: 12px;
   }
   
   .feature img {
@@ -167,6 +169,7 @@ border-radius:50%;
   .courses {
   padding: 50px;
   text-align: center;
+  border-radius: 12px;
   }
   
   .courses h2 {
