--- a/style.css
+++ b/style.css
@@ -167,11 +167,27 @@ a:link {
   footer nav li a:hover {
   text-decoration: underline;
   } 
-.social-media{
-display: inline-block;
-padding: 10px; ;
-margin-right:10px ;
-font-size: 18px;
+.social-media a {
+  display: inline-block;
+  padding: 10px;
+  margin-right: 10px;
+  font-size: 18px;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.facebook {
+  background-color: #3b5998;
+}
+
+.twitter {
+  background-color: #1da1f2;
+}
+
+.instagram {
+  background-color: #c13584;
 }
 .social-media a i {
   font-size: 24px;
